--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -10,7 +10,8 @@ layout: default
       </div>
       <div class="author-name">{{site.author}}</div>
       <p>{{site.about-author}}</p>
-      <p>CV Goes Here</p>
+      <hr>
+      <p><a href="{{site.baseurl}}/cv">My CV</a></p>
     </div>
   </header> <!-- End Header -->
   <footer>
