testing add to left pane

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -11,7 +11,8 @@ layout: default
       <div class="author-name">{{site.author}}</div>
       <p>{{site.about-author}}</p>
       <hr>
-      <p><a href="{{site.baseurl}}/cv">My CV</a></p>
+      <p><a href="{{site.baseurl}}/cv.html" style="text-decoration: none;">My CV</a></p>
+      <hr>
     </div>
   </header> <!-- End Header -->
   <footer>
