change CV formatting

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -13,6 +13,8 @@ layout: default
       <hr>
       <p><a href="{{site.baseurl}}/cv" style="color: #515151; text-decoration: none;">My CV</a></p>
       <hr>
+      <p><a href="{{site.baseurl}}/" style="color: #515151; text-decoration: none;">Blog</a></p>
+      <hr>
     </div>
   </header> <!-- End Header -->
   <footer>
